--- a/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
@@ -25,15 +25,16 @@ spring:
       discovery:
         locator:
           lowerCaseServiceId: true
+          # 让gateway通过服务发现组件找到其他的微服务
           enabled: true
       routes:
         # 认证中心
-        - id: ruoyi-auth
-          uri: lb://demo-auth
+        - id: ruoyi-auth  # 唯一标识，通常使用服务id
+          uri: lb://demo-auth  # 目标URL，lb代表从注册中心获取服务，lb是Load Balance的缩写
           predicates:
-            - Path=/auth/**
+            - Path=/auth/** # 匹配转发路径
           filters:
-            - StripPrefix=1
+            - StripPrefix=1  # 从第几级开始转发
 
 hystrix:
   command:
