--- a/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
@@ -29,12 +29,18 @@ spring:
           enabled: true
       routes:
         # 认证中心
-        - id: ruoyi-auth  # 唯一标识，通常使用服务id
-          uri: lb://demo-auth  # 目标URL，lb代表从注册中心获取服务，lb是Load Balance的缩写
+        - id: demo-service-provider   # 唯一标识，通常使用服务id
+          uri: lb://demo-service-provider  # 目标URL，lb代表从注册中心获取服务，lb是Load Balance的缩写
           predicates:
-            - Path=/auth/** # 匹配转发路径
+            - Path=/provider/**  # 匹配转发路径
           filters:
             - StripPrefix=1  # 从第几级开始转发
+        - id: demo-service-consumer
+          uri: lb://demo-service-consumer
+          predicates:
+            - Path=/consumer/**
+          filters:
+            - StripPrefix=1  
 
 hystrix:
   command:
