--- a/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-mydemo-gateway/src/main/resources/bootstrap.yml
@@ -14,6 +14,8 @@ spring:
       enabled: true
   profiles:
     active: dev
+  redis:    host: 127.0.0.1
+    port: 6379
   cloud:
     nacos:
       config:
@@ -35,12 +37,19 @@ spring:
             - Path=/provider/**  # 匹配转发路径
           filters:
             - StripPrefix=1  # 从第几级开始转发
+            # 限流配置
+            - name: RequestRateLimiter
+              args:
+                key-resolver: '#{@remoteAddrKeyResolver}'
+                redis-rate-limiter.replenishRate: 1
+                redis-rate-limiter.burstCapacity: 1
         - id: demo-service-consumer
           uri: lb://demo-service-consumer
           predicates:
             - Path=/consumer/**
           filters:
             - StripPrefix=1  
+            
 
 hystrix:
   command:
