fix: add zipkin demo

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
 		<module>spring-cloud-mydemo-gateway</module>
 		<module>spring-cloud-mydemo-service</module>
+		<module>spring-cloud-mydemo-zipkin</module>
 	</modules>
 
 	<properties>
