--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>spring-cloud-mydemo-gateway</module>
 		<module>spring-cloud-mydemo-service</module>
 		<module>spring-cloud-mydemo-zipkin</module>
+		<module>spring-cloud-mydemo-properties</module>
 	</modules>
 
 	<properties>
